# Manipulator

./: CMakeLists.txt  README.md
Driver/: CMakeLists.txt  driver.cpp  driver_inf.h  driver_priv.h  driver_pub.h
Kinematics/: CMakeLists.txt  kinematics.cpp  kinematics_inf.h  kinematics_priv.h  kinematics_pub.h
MCU/: CMakeLists.txt  mcu.cpp  mcu_inf.h  mcu_priv.h  mcu_pub.h
Manipulator/: CMakeLists.txt  manipulator.cpp  manipulator_inf.h  manipulator_priv.h  manipulator_pub.h
Motor/: CMakeLists.txt  motor.cpp  motor_inf.h  motor_priv.h  motor_pub.h
Serial_Communication/: Com.cpp  Com_inf.h  Com_priv.h  Com_pub.h
Sources/: AliasTypes.h  TheFirstProject.vcxproj  TheFirstProject.vcxproj.filters  main.cpp  manipulator.h
Sources/x64/Debug/: TheFirstProject.exe.recipe  TheFirstProject.ilk  vc143.idb
Sources/x64/Debug/TheFirstProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TheFirstProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Sources/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
serial/: CMakeLists.txt  Com.cpp  Com_inf.h  Com_priv.h  Com_pub.h
src/: AliasTypes.h  main.cpp  manipulator.h
